hphp/hack/test/typecheck/enum_class/enum_class_this_ref.php.exp
File "enum_class_this_ref.php", line 6, characters 17-21:
Variable `$this` is undefined, or not always defined. (Naming[2050])
