hphp/hack/test/typecheck/enum_class/enum_class_this_ref.php
<?hh

final class Foo {}

enum class Foos: Foo {
  Foo EXAMPLE = $this;
}
